# infoextract-cidoc

./: .codecov.yml  .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLIE_Demo_Notebook.ipynb  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  einstein_demo.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: changelog-check.yml  docs.yml  llm-tests.yml  pr-labeler.yml  publish.yaml  release-tracking.yml  test.yml
docs/: index.md
docs/community/: security.md
docs/development/: contributing.md  release-process.md  testing.md
docs/getting-started/: installation.md  quickstart.md  tutorial.md
docs/guide/: crm-models.md  extraction.md  output-formats.md
docs/reference/: api.md
docs/stylesheets/: extra.css
scripts/: bump_version.py  check_release_needed.py
src/infoextract_cidoc/: __init__.py  main.py  properties.py
src/infoextract_cidoc/codegen/: cidoc_crm.yaml  cidoc_crm_properties.yaml  generate_models.py  generate_properties.py  generate_registry.py  generate_templates.py
src/infoextract_cidoc/codegen/specs/: aliases.yaml  crm_classes.yaml  crm_properties.yaml
src/infoextract_cidoc/examples/: einstein.md  museum_object.json
src/infoextract_cidoc/extraction/: __init__.py  crm_mapper.py  langstruct_extractor.py  lite_schema.py  models.py  resolution.py
src/infoextract_cidoc/io/: __init__.py  to_cypher.py  to_graphforge.py  to_markdown.py
src/infoextract_cidoc/io/to_networkx/: __init__.py  analysis.py  converters.py  graph_builder.py
src/infoextract_cidoc/models/: __init__.py  base.py
src/infoextract_cidoc/tests/: __init__.py  test_llm_e2e.py  test_networkx_integration.py
src/infoextract_cidoc/tests/golden/: __init__.py  test_museum_object.py
src/infoextract_cidoc/tests/unit/: __init__.py  test_codegen.py  test_crm_mapper.py  test_cypher.py  test_graphforge_output.py  test_langstruct_extractor.py  test_lite_schema.py  test_markdown.py  test_pipeline_integration.py  test_resolution.py  test_validators.py
src/infoextract_cidoc/validators/: __init__.py  quantifiers.py  typing_rules.py
src/infoextract_cidoc/visualization/: __init__.py  export.py  plotting.py  styling.py
