[project]
name = "infoextract-cidoc"
version = "0.1.1"
description = "Classful Ontology for Life-Events Information Extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Spencer", email = "david.spencer@familysearch.org"}
]
maintainers = [
    {name = "David Spencer", email = "david.spencer@familysearch.org"}
]
keywords = [
    "ontology", "semantic-web", "data-modeling", "validation", "pydantic", "python",
    "cultural-heritage", "museums", "archives", "libraries", "information-extraction",
    "life-events", "genealogy", "historical-data", "cidoc-crm", "iso-21127",
    "markdown", "cypher", "neo4j", "memgraph", "graph-database", "llm", "ai",
    "semantic-interoperability", "linked-data", "knowledge-graph", "developer-tools",
    "code-generation", "yaml", "json-schema", "uuid", "data-integration", "etl",
    "nlp", "text-processing", "entity-extraction", "documentation", "reporting"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Documentation",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "networkx>=3.5",
    "pydantic>=2.0.0",
    "langstruct>=0.2.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "ipykernel>=6.30.1",
    "nbformat>=4.2.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
graphforge = ["graphforge>=0.3.0"]

[project.urls]
Homepage = "https://github.com/decisionnerd/infoextract-cidoc"
Repository = "https://github.com/decisionnerd/infoextract-cidoc"
Issues = "https://github.com/decisionnerd/infoextract-cidoc/issues"

[project.scripts]
infoextract-cidoc = "infoextract_cidoc.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infoextract_cidoc"]

[tool.hatch.build.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "linkml>=1.9.6",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["src/infoextract_cidoc/codegen/generate_templates.py", "src/infoextract_cidoc/codegen/cidoc_crm.yaml", "src/infoextract_cidoc/codegen/cidoc_crm_properties.yaml"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "E203"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["infoextract_cidoc"]

[tool.ruff.lint.per-file-ignores]
"src/infoextract_cidoc/codegen/generate_templates.py" = ["ALL"]
"src/infoextract_cidoc/tests/**/*.py" = ["S101", "TID252", "B017", "PT011", "PT018", "PLR0915", "PLR2004", "PLC0415", "SLF001", "ARG002", "ERA001"]
"src/infoextract_cidoc/models/generated/*.py" = ["RUF012", "N801", "FBT001", "TC003"]
"src/infoextract_cidoc/codegen/*.py" = ["EXE001", "PLC0415", "INP001", "T201"]
"src/infoextract_cidoc/models/base.py" = ["RUF012", "N801", "FBT001", "N805", "PLC0415", "S324"]
"src/infoextract_cidoc/io/*.py" = ["FBT001", "INP001", "PERF401", "PLW2901"]
"src/infoextract_cidoc/io/to_networkx/*.py" = ["ARG001"]
"src/infoextract_cidoc/tests/unit/*.py" = ["PLR2004"]
"src/infoextract_cidoc/validators/*.py" = ["PLC0415"]
"src/infoextract_cidoc/visualization/*.py" = ["PLR0913", "PLR0911", "FBT001", "FBT002", "FBT003", "ARG001", "A002", "PERF401", "NPY002"]
"src/infoextract_cidoc/main.py" = ["PLR0913", "PLR0915", "FBT001", "FBT002", "FBT003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["src/infoextract_cidoc/codegen/generate_templates.py"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["src/infoextract_cidoc/tests/", "docs/", "src/infoextract_cidoc/codegen/generate_templates\\.py"]

[tool.bandit]
exclude_dirs = ["src/infoextract_cidoc/tests", "src/infoextract_cidoc/codegen/generate_templates.py"]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests requiring multiple components",
    "golden: golden-file regression tests",
    "llm: tests requiring a live LLM API key",
]

[tool.coverage.run]
branch = true
source = ["src/infoextract_cidoc"]
omit = [
    "src/infoextract_cidoc/tests/*",
    "src/infoextract_cidoc/codegen/*",
    "src/infoextract_cidoc/main.py",
    "src/infoextract_cidoc/visualization/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
